def partition + def quicksort

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -516,14 +516,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Função def quicksort(a,b)\n",
+    "# Função def quicksort + def partition\n",
     "\n",
-    "def quicksort(a,b):\n",
-    "    print('testando att')"
+    "def rank_value(rank):\n",
+    "    rank_map = {\n",
+    "        \"Ferro\": 1,\n",
+    "        \"Bronze\": 2,\n",
+    "        \"Prata\": 3,\n",
+    "        \"Ouro\": 4,\n",
+    "        \"Platina\": 5,\n",
+    "        \"Diamante\": 6,\n",
+    "        \"Imortal\": 7,\n",
+    "        \"Radiante\": 8,\n",
+    "        \"Mestre\": 9,\n",
+    "        \"Grão-Mestre\": 10,\n",
+    "        \"Desafiante\": 11,\n",
+    "        \"Não possui\": 0  # Considerando \"Não possui\" como o menor valor\n",
+    "    }\n",
+    "    return rank_map.get(rank.capitalize(), 0)\n",
+    "\n",
+    "def partition(arr, low, high):\n",
+    "    pivot = arr[high]\n",
+    "    i = low - 1\n",
+    "\n",
+    "    for j in range(low, high):\n",
+    "        if rank_value(arr[j]['Nível ranked']) >= rank_value(pivot['Nível ranked']):\n",
+    "            i += 1\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "    \n",
+    "    arr[i + 1], arr[high] = arr[high], arr[i + 1]\n",
+    "    return i + 1\n",
+    "\n",
+    "def quicksort(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pi = partition(arr, low, high)\n",
+    "        quicksort(arr, low, pi - 1)\n",
+    "        quicksort(arr, pi + 1, high)\n",
+    "\n",
+    "quicksort(users, 0, len(users) - 1)\n",
+    "\n",
+    "print('Usuários ordenados por nível ranked:')\n",
+    "display(pd.DataFrame(users))"
    ]
   },
   {
