--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,11 +738,127 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## SEGUNDA PARTE DA AVALIAÇÃO \n",
+    "Adição de fila deque e DataFrame (tabela hash):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você realizou seu cadastro com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "import pandas as pd\n",
+    "\n",
+    "users = [\n",
+    "    {\"Nome\": \"Arthur Silva\", \"Idade\": 19, \"Sexo\": \"Masculino\", \"Gênero de jogo\": \"FPS\", \"Jogo de busca\": \"Valorant\", \"Nível ranked\": \"Imortal\", \"Função\": \"Duelista\"},\n",
+    "    {\"Nome\": \"Kaio Victor\", \"Idade\": 20, \"Sexo\": \"Indefinido\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"Valorant\", \"Nível ranked\": \"Não possui\", \"Função\": \"Smoke\"},\n",
+    "    {\"Nome\": \"André Victor\", \"Idade\": 19, \"Sexo\": \"Feminino\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"League of Legends\", \"Nível ranked\": \"Ferro\", \"Função\": \"Top\"},\n",
+    "    {\"Nome\": \"Lucas\", \"Idade\": 21, \"Sexo\": \"Masculino\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"League of Legends\", \"Nível ranked\": \"Prata\", \"Função\": \"Mid\"},\n",
+    "    {\"Nome\": \"Daniel\", \"Idade\": 23, \"Sexo\": \"Masculino\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"League of Legends\", \"Nível ranked\": \"Prata\", \"Função\": \"Jungle\"}\n",
+    "]\n",
+    "\n",
+    "def cadastrar_user():\n",
+    "    users.append({\n",
+    "        \"Nome\": input(\"Digite seu nome: \"),\n",
+    "        \"Idade\": int(input(\"Digite sua idade: \")),\n",
+    "        \"Sexo\": input(\"Digite seu sexo: \"),\n",
+    "        \"Gênero de jogo\": input(\"Digite o gênero de jogo que você prefere: \"),\n",
+    "        \"Jogo de busca\": input(\"Digite o jogo para o qual você está buscando um DUO: \"),\n",
+    "        \"Nível ranked\": input(\"Digite o seu nível ranked: \"),\n",
+    "        \"Função\": input(\"Digite sua função principal: \")\n",
+    "    })\n",
+    "    print(\"Você realizou seu cadastro com sucesso!\")\n",
+    "\n",
+    "class MatchmakingQueue:\n",
+    "    def __init__(self):\n",
+    "        self.queue = deque()\n",
+    "\n",
+    "    def find_match_for_latest(self):\n",
+    "        if len(users) < 2:\n",
+    "            print(\"Não há jogadores suficientes para formar um match.\")\n",
+    "            return\n",
+    "        \n",
+    "        ultimo_player = users[-1]\n",
+    "        melhor_match = None\n",
+    "        melhor_match_score = float('inf')\n",
+    "\n",
+    "        for player in users[:-1]:  # Exclui o último usuário da busca\n",
+    "            if player[\"Jogo de busca\"] == ultimo_player[\"Jogo de busca\"] and player[\"Função\"] != ultimo_player[\"Função\"]:\n",
+    "                # Calcula a compatibilidade baseada em critérios de idade, sexo e ranking\n",
+    "                idade_diff = abs(player[\"Idade\"] - ultimo_player[\"Idade\"])\n",
+    "                ranking_diff = abs(self.rank_to_number(player[\"Nível ranked\"]) - self.rank_to_number(ultimo_player[\"Nível ranked\"]))\n",
+    "                \n",
+    "                # Atribui uma pontuação maior se o sexo for diferente, menor se for igual\n",
+    "                sexo_diff = 0 if player[\"Sexo\"] == ultimo_player[\"Sexo\"] else 5\n",
+    "                \n",
+    "                # Soma os critérios para encontrar o melhor match\n",
+    "                match_score = idade_diff + ranking_diff + sexo_diff\n",
+    "\n",
+    "                if match_score < melhor_match_score:\n",
+    "                    melhor_match = player\n",
+    "                    melhor_match_score = match_score\n",
+    "\n",
+    "        if melhor_match:\n",
+    "            print(f\"Match encontrado: {ultimo_player['Nome']} e {melhor_match['Nome']} estão prontos para jogarem DUO! Se divirtam!\")\n",
+    "        else:\n",
+    "            print(f\"Não foi encontrado um match compatível para {ultimo_player['Nome']}.\")\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def rank_to_number(rank):\n",
+    "        ranks = {\n",
+    "            \"Ferro\": 1,\n",
+    "            \"Bronze\": 2,\n",
+    "            \"Prata\": 3,\n",
+    "            \"Ouro\": 4,\n",
+    "            \"Platina\": 5,\n",
+    "            \"Diamante\": 6,\n",
+    "            \"Imortal\": 7,\n",
+    "            \"Radiante\": 8\n",
+    "        }\n",
+    "        return ranks.get(rank, 0)\n",
+    "\n",
+    "def funcao_matchmaking():\n",
+    "    matchmaking_queue = MatchmakingQueue()\n",
+    "    \n",
+    "    while True:\n",
+    "        menu = int(input('''\n",
+    "        SELECIONE SUA OPÇÃO DESEJADA:\n",
+    "        1 - Adicionar um(a) usuário(a) no banco de dados do sistema.\n",
+    "        2 - Pesquisar um(a) usuário(a) de nosso sistema.\n",
+    "        3 - Encontrar um DUO para jogar.\n",
+    "        4 - Mostrar usuários(as) e suas informações cadastradas no sistema.\n",
+    "        5 - Sair do sistema.\n",
+    "    '''))\n",
+    "\n",
+    "        if menu == 5:\n",
+    "            break\n",
+    "        elif menu == 4:\n",
+    "            display(pd.DataFrame(users))\n",
+    "        elif menu == 3:\n",
+    "            matchmaking_queue.find_match_for_latest()\n",
+    "        elif menu == 2:\n",
+    "            nome_busca = input(\"Digite o nome do usuário que deseja buscar: \")\n",
+    "            busca_resultado = next((user for user in users if user[\"Nome\"].lower() == nome_busca.lower()), None)\n",
+    "            print(f\"Usuário encontrado: {busca_resultado}\" if busca_resultado else \"Usuário não encontrado.\")\n",
+    "        elif menu == 1:\n",
+    "            cadastrar_user()\n",
+    "\n",
+    "# Executa a função de matchmaking\n",
+    "funcao_matchmaking()"
+   ]
   }
  ],
  "metadata": {
@@ -761,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
