Nova função de salvar os dados em um arquivo CSV garantindo a persistência.

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -747,14 +747,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Você realizou seu cadastro com sucesso!\n"
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'users' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 101\u001b[0m\n\u001b[0;32m     98\u001b[0m             cadastrar_user()\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m# Executa a função de matchmaking\u001b[39;00m\n\u001b[1;32m--> 101\u001b[0m \u001b[43mfuncao_matchmaking\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[2], line 98\u001b[0m, in \u001b[0;36mfuncao_matchmaking\u001b[1;34m()\u001b[0m\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsuário encontrado: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbusca_resultado\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m busca_resultado \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsuário não encontrado.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     97\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m menu \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 98\u001b[0m     \u001b[43mcadastrar_user\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[2], line 13\u001b[0m, in \u001b[0;36mcadastrar_user\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcadastrar_user\u001b[39m():\n\u001b[1;32m---> 13\u001b[0m     \u001b[43musers\u001b[49m\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNome\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite seu nome: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIdade\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite sua idade: \u001b[39m\u001b[38;5;124m\"\u001b[39m)),\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSexo\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite seu sexo: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGênero de jogo\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite o gênero de jogo que você prefere: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJogo de busca\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite o jogo para o qual você está buscando um DUO: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNível ranked\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite o seu nível ranked: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     20\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFunção\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite sua função principal: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m     })\n\u001b[0;32m     22\u001b[0m     users \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(users)\n\u001b[0;32m     23\u001b[0m     display(users)\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'users' where it is not associated with a value"
      ]
     }
    ],
@@ -780,6 +786,8 @@
     "        \"Nível ranked\": input(\"Digite o seu nível ranked: \"),\n",
     "        \"Função\": input(\"Digite sua função principal: \")\n",
     "    })\n",
+    "    users = pd.DataFrame(users)\n",
+    "    display(users)\n",
     "    print(\"Você realizou seu cadastro com sucesso!\")\n",
     "\n",
     "class MatchmakingQueue:\n",
@@ -846,7 +854,7 @@
     "        if menu == 5:\n",
     "            break\n",
     "        elif menu == 4:\n",
-    "            display(pd.DataFrame(users))\n",
+    "            display(users)\n",
     "        elif menu == 3:\n",
     "            matchmaking_queue.find_match_for_latest()\n",
     "        elif menu == 2:\n",
@@ -877,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
