adicionando mods adicionando mods

--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -747,48 +747,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'users' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 101\u001b[0m\n\u001b[0;32m     98\u001b[0m             cadastrar_user()\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m# Executa a função de matchmaking\u001b[39;00m\n\u001b[1;32m--> 101\u001b[0m \u001b[43mfuncao_matchmaking\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[2], line 98\u001b[0m, in \u001b[0;36mfuncao_matchmaking\u001b[1;34m()\u001b[0m\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsuário encontrado: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbusca_resultado\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m busca_resultado \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsuário não encontrado.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     97\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m menu \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 98\u001b[0m     \u001b[43mcadastrar_user\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[2], line 13\u001b[0m, in \u001b[0;36mcadastrar_user\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcadastrar_user\u001b[39m():\n\u001b[1;32m---> 13\u001b[0m     \u001b[43musers\u001b[49m\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNome\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite seu nome: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIdade\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite sua idade: \u001b[39m\u001b[38;5;124m\"\u001b[39m)),\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSexo\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite seu sexo: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGênero de jogo\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite o gênero de jogo que você prefere: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJogo de busca\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite o jogo para o qual você está buscando um DUO: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNível ranked\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite o seu nível ranked: \u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     20\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFunção\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDigite sua função principal: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m     })\n\u001b[0;32m     22\u001b[0m     users \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(users)\n\u001b[0;32m     23\u001b[0m     display(users)\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'users' where it is not associated with a value"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import deque\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "users = [\n",
-    "    {\"Nome\": \"Arthur Silva\", \"Idade\": 19, \"Sexo\": \"Masculino\", \"Gênero de jogo\": \"FPS\", \"Jogo de busca\": \"Valorant\", \"Nível ranked\": \"Imortal\", \"Função\": \"Duelista\"},\n",
-    "    {\"Nome\": \"Kaio Victor\", \"Idade\": 20, \"Sexo\": \"Indefinido\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"Valorant\", \"Nível ranked\": \"Não possui\", \"Função\": \"Smoke\"},\n",
-    "    {\"Nome\": \"André Victor\", \"Idade\": 19, \"Sexo\": \"Feminino\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"League of Legends\", \"Nível ranked\": \"Ferro\", \"Função\": \"Top\"},\n",
-    "    {\"Nome\": \"Lucas\", \"Idade\": 21, \"Sexo\": \"Masculino\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"League of Legends\", \"Nível ranked\": \"Prata\", \"Função\": \"Mid\"},\n",
-    "    {\"Nome\": \"Daniel\", \"Idade\": 23, \"Sexo\": \"Masculino\", \"Gênero de jogo\": \"MOBA\", \"Jogo de busca\": \"League of Legends\", \"Nível ranked\": \"Prata\", \"Função\": \"Jungle\"}\n",
-    "]\n",
+    "\n",
+    "if os.path.exists('users.csv'):\n",
+    "    users = pd.read_csv('users.csv')\n",
+    "else:\n",
+    "    users = pd.DataFrame(columns=[\"Nome\", \"Idade\", \"Sexo\", \"Gênero de jogo\", \"Jogo de busca\", \"Nível ranked\", \"Função\"])\n",
     "\n",
     "def cadastrar_user():\n",
-    "    users.append({\n",
-    "        \"Nome\": input(\"Digite seu nome: \"),\n",
+    "    global users\n",
+    "    novo_usuario = pd.DataFrame([{\n",
+    "        \"Nome\": input(\"Digite seu nome: \").lower(),\n",
     "        \"Idade\": int(input(\"Digite sua idade: \")),\n",
-    "        \"Sexo\": input(\"Digite seu sexo: \"),\n",
-    "        \"Gênero de jogo\": input(\"Digite o gênero de jogo que você prefere: \"),\n",
-    "        \"Jogo de busca\": input(\"Digite o jogo para o qual você está buscando um DUO: \"),\n",
-    "        \"Nível ranked\": input(\"Digite o seu nível ranked: \"),\n",
-    "        \"Função\": input(\"Digite sua função principal: \")\n",
-    "    })\n",
-    "    users = pd.DataFrame(users)\n",
-    "    display(users)\n",
+    "        \"Sexo\": input(\"Digite seu sexo: \").lower(),\n",
+    "        \"Gênero de jogo\": input(\"Digite o gênero de jogo que você prefere: \").lower(),\n",
+    "        \"Jogo de busca\": input(\"Digite o jogo para o qual você está buscando um DUO: \").lower(),\n",
+    "        \"Nível ranked\": input(\"Digite o seu nível ranked: \").lower(),\n",
+    "        \"Função\": input(\"Digite sua função principal: \").lower()\n",
+    "    }])\n",
+    "\n",
+    "    # Usa pd.concat() para adicionar a nova linha ao DataFrame\n",
+    "    users = pd.concat([users, novo_usuario], ignore_index=True)\n",
+    "    users.to_csv('users.csv', index=False)\n",
     "    print(\"Você realizou seu cadastro com sucesso!\")\n",
+    "    display(users)\n",
+    "\n",
     "\n",
     "class MatchmakingQueue:\n",
     "    def __init__(self):\n",
