--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -747,15 +747,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você realizou seu cadastro com sucesso!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Gênero de jogo</th>\n",
+       "      <th>Jogo de busca</th>\n",
+       "      <th>Nível ranked</th>\n",
+       "      <th>Função</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>arthur</td>\n",
+       "      <td>19</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>prata</td>\n",
+       "      <td>top</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>arthur</td>\n",
+       "      <td>19</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>prata</td>\n",
+       "      <td>top</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>junin</td>\n",
+       "      <td>18</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>ouro</td>\n",
+       "      <td>mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>toreba</td>\n",
+       "      <td>19</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>bronze</td>\n",
+       "      <td>adc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Nome  Idade       Sexo Gênero de jogo      Jogo de busca Nível ranked  \\\n",
+       "0  arthur     19  masculino           moba  league of legends        prata   \n",
+       "1  arthur     19  masculino           moba  league of legends        prata   \n",
+       "2   junin     18  masculino           moba  league of legends         ouro   \n",
+       "3  toreba     19  masculino           moba  league of legends       bronze   \n",
+       "\n",
+       "  Função  \n",
+       "0    top  \n",
+       "1    top  \n",
+       "2    mid  \n",
+       "3    adc  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match encontrado: toreba e arthur estão prontos para jogarem DUO! Se divirtam!\n",
+      "Match encontrado: toreba e arthur estão prontos para jogarem DUO! Se divirtam!\n",
+      "Você realizou seu cadastro com sucesso!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Gênero de jogo</th>\n",
+       "      <th>Jogo de busca</th>\n",
+       "      <th>Nível ranked</th>\n",
+       "      <th>Função</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>arthur</td>\n",
+       "      <td>19</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>prata</td>\n",
+       "      <td>top</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>arthur</td>\n",
+       "      <td>19</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>prata</td>\n",
+       "      <td>top</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>junin</td>\n",
+       "      <td>18</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>ouro</td>\n",
+       "      <td>mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>toreba</td>\n",
+       "      <td>19</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>bronze</td>\n",
+       "      <td>adc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>karen</td>\n",
+       "      <td>19</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>bronze</td>\n",
+       "      <td>mid</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Nome  Idade       Sexo Gênero de jogo      Jogo de busca Nível ranked  \\\n",
+       "0  arthur     19  masculino           moba  league of legends        prata   \n",
+       "1  arthur     19  masculino           moba  league of legends        prata   \n",
+       "2   junin     18  masculino           moba  league of legends         ouro   \n",
+       "3  toreba     19  masculino           moba  league of legends       bronze   \n",
+       "4   karen     19   feminino           moba  league of legends       bronze   \n",
+       "\n",
+       "  Função  \n",
+       "0    top  \n",
+       "1    top  \n",
+       "2    mid  \n",
+       "3    adc  \n",
+       "4    mid  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match encontrado: karen e arthur estão prontos para jogarem DUO! Se divirtam!\n",
+      "Match encontrado: karen e arthur estão prontos para jogarem DUO! Se divirtam!\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "\n",
+    "# Carrega o CSV ou cria um novo DataFrame se o arquivo não existir\n",
     "if os.path.exists('users.csv'):\n",
     "    users = pd.read_csv('users.csv')\n",
     "else:\n",
@@ -779,7 +1000,6 @@
     "    print(\"Você realizou seu cadastro com sucesso!\")\n",
     "    display(users)\n",
     "\n",
-    "\n",
     "class MatchmakingQueue:\n",
     "    def __init__(self):\n",
     "        self.queue = deque()\n",
@@ -789,27 +1009,24 @@
     "            print(\"Não há jogadores suficientes para formar um match.\")\n",
     "            return\n",
     "        \n",
-    "        ultimo_player = users[-1]\n",
+    "        ultimo_player = users.iloc[-1]\n",
     "        melhor_match = None\n",
     "        melhor_match_score = float('inf')\n",
     "\n",
-    "        for player in users[:-1]:  # Exclui o último usuário da busca\n",
+    "        for _, player in users.iloc[:-1].iterrows(): \n",
     "            if player[\"Jogo de busca\"] == ultimo_player[\"Jogo de busca\"] and player[\"Função\"] != ultimo_player[\"Função\"]:\n",
-    "                # Calcula a compatibilidade baseada em critérios de idade, sexo e ranking\n",
+    "\n",
     "                idade_diff = abs(player[\"Idade\"] - ultimo_player[\"Idade\"])\n",
     "                ranking_diff = abs(self.rank_to_number(player[\"Nível ranked\"]) - self.rank_to_number(ultimo_player[\"Nível ranked\"]))\n",
     "                \n",
-    "                # Atribui uma pontuação maior se o sexo for diferente, menor se for igual\n",
     "                sexo_diff = 0 if player[\"Sexo\"] == ultimo_player[\"Sexo\"] else 5\n",
-    "                \n",
-    "                # Soma os critérios para encontrar o melhor match\n",
     "                match_score = idade_diff + ranking_diff + sexo_diff\n",
     "\n",
     "                if match_score < melhor_match_score:\n",
     "                    melhor_match = player\n",
     "                    melhor_match_score = match_score\n",
     "\n",
-    "        if melhor_match:\n",
+    "        if melhor_match is not None:\n",
     "            print(f\"Match encontrado: {ultimo_player['Nome']} e {melhor_match['Nome']} estão prontos para jogarem DUO! Se divirtam!\")\n",
     "        else:\n",
     "            print(f\"Não foi encontrado um match compatível para {ultimo_player['Nome']}.\")\n",
@@ -849,13 +1066,13 @@
     "            matchmaking_queue.find_match_for_latest()\n",
     "        elif menu == 2:\n",
     "            nome_busca = input(\"Digite o nome do usuário que deseja buscar: \")\n",
-    "            busca_resultado = next((user for user in users if user[\"Nome\"].lower() == nome_busca.lower()), None)\n",
-    "            print(f\"Usuário encontrado: {busca_resultado}\" if busca_resultado else \"Usuário não encontrado.\")\n",
+    "            busca_resultado = users[users['Nome'].str.lower() == nome_busca.lower()]\n",
+    "            print(f\"Usuário encontrado: {busca_resultado.to_dict('records')}\" if not busca_resultado.empty else \"Usuário não encontrado.\")\n",
     "        elif menu == 1:\n",
     "            cadastrar_user()\n",
     "\n",
-    "# Executa a função de matchmaking\n",
-    "funcao_matchmaking()"
+    "\n",
+    "funcao_matchmaking()\n"
    ]
   }
  ],
